--- a/guide/tutorial/4-data-selection.ipynb
+++ b/guide/tutorial/4-data-selection.ipynb
@@ -243,8 +243,8 @@
     }
    ],
    "source": [
-    "from techMiner.keywords import MyKeywords\n",
-    "kyw = MyKeywords()\n",
+    "from techMiner.keywords import Keywords\n",
+    "kyw = Keywords()\n",
     "kyw.add_keywords(df['keywords'], sep=';')\n",
     "kyw._keywords[0:10]"
    ]
@@ -325,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conf = MyKeywords()\n",
+    "conf = Keywords()\n",
     "conf.add_keywords(['Conferce', 'Proceeding', 'Workshop'], sep=';')\n",
     "df['SELECTED'] = df['Title'].map(lambda x: False if conf.find(x) is True else None)"
    ]
