--- a/guide/tutorial/4-data-selection.ipynb
+++ b/guide/tutorial/4-data-selection.ipynb
@@ -276,7 +276,7 @@
    "outputs": [],
    "source": [
     "## se extrae del titulo y del abstract\n",
-    "keywords_title_abstract = title_abstract.map(lambda x: kyw.extract(x))"
+    "keywords_title_abstract = title_abstract.map(lambda x: kyw.extract_from(x))"
    ]
   },
   {
