Update list_by_list PEP convension

--- a/guide/tutorial/6-basic-analysis.ipynb
+++ b/guide/tutorial/6-basic-analysis.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from techMiner import documentsByTerm"
+    "from techMiner import documents_by_term"
    ]
   },
   {
@@ -129,7 +129,7 @@
     }
    ],
    "source": [
-    "documentsByTerm(records, 'Document Type')"
+    "documents_by_term(records, 'Document Type')"
    ]
   },
   {
@@ -151,7 +151,7 @@
     }
    ],
    "source": [
-    "documentsByTerm(records, 'Document Type').plot.barh('Document Type', 'Num Documents', color='gray');"
+    "documents_by_term(records, 'Document Type').plot.barh('Document Type', 'Num Documents', color='gray');"
    ]
   },
   {
@@ -241,7 +241,7 @@
    ],
    "source": [
     "from techMiner import alt_barh_graph\n",
-    "alt_barh_graph(documentsByTerm(records, 'Document Type'))"
+    "alt_barh_graph(documents_by_term(records, 'Document Type'))"
    ]
   },
   {
@@ -331,7 +331,7 @@
    ],
    "source": [
     "from techMiner import alt_bar_graph\n",
-    "alt_bar_graph(documentsByTerm(records, 'Document Type'))"
+    "alt_bar_graph(documents_by_term(records, 'Document Type'))"
    ]
   },
   {
@@ -354,7 +354,7 @@
    ],
    "source": [
     "from techMiner import sns_barh_plot\n",
-    "sns_barh_plot(documentsByTerm(records, 'Document Type'));"
+    "sns_barh_plot(documents_by_term(records, 'Document Type'));"
    ]
   },
   {
@@ -377,7 +377,7 @@
    ],
    "source": [
     "from techMiner import sns_bar_plot\n",
-    "sns_bar_plot(documentsByTerm(records, 'Document Type'));"
+    "sns_bar_plot(documents_by_term(records, 'Document Type'));"
    ]
   },
   {
@@ -594,7 +594,7 @@
     }
    ],
    "source": [
-    "documentsByTerm(records, 'Cited by')"
+    "documents_by_term(records, 'Cited by')"
    ]
   },
   {
@@ -686,7 +686,7 @@
    ],
    "source": [
     "records['Num Authors'] = records['Author(s) ID'].map(lambda x: len(x.split(';')))\n",
-    "documentsByTerm(records, 'Num Authors')"
+    "documents_by_term(records, 'Num Authors')"
    ]
   },
   {
@@ -1060,7 +1060,7 @@
     }
    ],
    "source": [
-    "documentsByTerm(records, 'Source title')"
+    "documents_by_term(records, 'Source title')"
    ]
   },
   {
@@ -1434,7 +1434,7 @@
     }
    ],
    "source": [
-    "documentsByTerm(records, 'Authors', sep=',')"
+    "documents_by_term(records, 'Authors', sep=',')"
    ]
   },
   {
@@ -1808,7 +1808,7 @@
     }
    ],
    "source": [
-    "documentsByTerm(records, 'Keywords', sep=';')"
+    "documents_by_term(records, 'Keywords', sep=';')"
    ]
   },
   {
@@ -2161,7 +2161,7 @@
    ],
    "source": [
     "records['Country'] = records['Affiliations'].map(lambda x: extractCountries(x))\n",
-    "documentsByTerm(records, 'Country', sep=';')"
+    "documents_by_term(records, 'Country', sep=';')"
    ]
   },
   {
@@ -2184,7 +2184,7 @@
    ],
    "source": [
     "from techMiner import worldmap\n",
-    "worldmap(documentsByTerm(records, 'Country', sep=';'))"
+    "worldmap(documents_by_term(records, 'Country', sep=';'))"
    ]
   },
   {
@@ -2395,8 +2395,8 @@
     }
    ],
    "source": [
-    "from techMiner import documentsByYear\n",
-    "documentsByYear(records)"
+    "from techMiner import documents_by_year\n",
+    "documents_by_year(records)"
    ]
   },
   {
@@ -2565,7 +2565,7 @@
     }
    ],
    "source": [
-    "alt_barh_graph(documentsByYear(records))"
+    "alt_barh_graph(documents_by_year(records))"
    ]
   },
   {
@@ -2734,7 +2734,7 @@
     }
    ],
    "source": [
-    "alt_bar_graph(documentsByYear(records))"
+    "alt_bar_graph(documents_by_year(records))"
    ]
   },
   {
@@ -2938,7 +2938,7 @@
     }
    ],
    "source": [
-    "documentsByYear(records, cumulative=True)"
+    "documents_by_year(records, cumulative=True)"
    ]
   },
   {
@@ -3107,7 +3107,7 @@
     }
    ],
    "source": [
-    "alt_barh_graph(documentsByYear(records, cumulative=True))"
+    "alt_barh_graph(documents_by_year(records, cumulative=True))"
    ]
   },
   {
@@ -3276,7 +3276,7 @@
     }
    ],
    "source": [
-    "alt_bar_graph(documentsByYear(records, cumulative=True))"
+    "alt_bar_graph(documents_by_year(records, cumulative=True))"
    ]
   },
   {
@@ -3487,8 +3487,8 @@
     }
    ],
    "source": [
-    "from techMiner import citationsByYear\n",
-    "citationsByYear(records)"
+    "from techMiner import citations_by_year\n",
+    "citations_by_year(records)"
    ]
   },
   {
@@ -3657,7 +3657,7 @@
     }
    ],
    "source": [
-    "alt_bar_graph(citationsByYear(records))"
+    "alt_bar_graph(citations_by_year(records))"
    ]
   },
   {
@@ -3826,7 +3826,7 @@
     }
    ],
    "source": [
-    "alt_bar_graph(citationsByYear(records, cumulative=True))"
+    "alt_bar_graph(citations_by_year(records, cumulative=True))"
    ]
   },
   {
@@ -3995,7 +3995,7 @@
     }
    ],
    "source": [
-    "alt_barh_graph(citationsByYear(records))"
+    "alt_barh_graph(citations_by_year(records))"
    ]
   },
   {
@@ -4164,7 +4164,7 @@
     }
    ],
    "source": [
-    "alt_barh_graph(citationsByYear(records, cumulative=True))"
+    "alt_barh_graph(citations_by_year(records, cumulative=True))"
    ]
   }
  ],
