--- a/guide/tutorial/7-matrix-analysis.ipynb
+++ b/guide/tutorial/7-matrix-analysis.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from techMiner import termByTerm"
+    "from techMiner import term_by_term"
    ]
   },
   {
@@ -129,7 +129,7 @@
     }
    ],
    "source": [
-    "termByTerm(\n",
+    "term_by_term(\n",
     "    df=records, \n",
     "    termA='Keywords', \n",
     "    termB='Year', \n",
@@ -218,7 +218,7 @@
     }
    ],
    "source": [
-    "termByTerm( \n",
+    "term_by_term( \n",
     "    df=records, \n",
     "    termA='Keywords', \n",
     "    termB='Year', \n",
@@ -249,7 +249,7 @@
     "from techMiner import heatmap\n",
     "\n",
     "heatmap(\n",
-    "    termByTerm( \n",
+    "    term_by_term( \n",
     "        df=records, \n",
     "        termA='Keywords', \n",
     "        termB='Year', \n",
@@ -603,7 +603,7 @@
     "from techMiner import alt_heatmap\n",
     "\n",
     "alt_heatmap(\n",
-    "    termByTerm( \n",
+    "    term_by_term( \n",
     "        df=records, \n",
     "        termA='Keywords', \n",
     "        termB='Year', \n",
@@ -963,7 +963,7 @@
     "from techMiner import alt_circleplot\n",
     "\n",
     "alt_circleplot(\n",
-    "    termByTerm( \n",
+    "    term_by_term( \n",
     "        df=records, \n",
     "        termA='Keywords', \n",
     "        termB='Year', \n",
@@ -1417,7 +1417,7 @@
     }
    ],
    "source": [
-    "m = termByTerm( \n",
+    "m = term_by_term( \n",
     "    df=records, \n",
     "    termA='Keywords', \n",
     "    termB='Year', \n",
@@ -3115,7 +3115,7 @@
     }
    ],
    "source": [
-    "termByTerm(\n",
+    "term_by_term(\n",
     "    df=records, \n",
     "    termA='Document Type', \n",
     "    termB='Year', \n",
@@ -3211,7 +3211,7 @@
     }
    ],
    "source": [
-    "termByTerm(\n",
+    "term_by_term(\n",
     "    df=records, \n",
     "    termA='Keywords', \n",
     "    termB='Year', \n",
@@ -3307,7 +3307,7 @@
     }
    ],
    "source": [
-    "termByTerm(\n",
+    "term_by_term(\n",
     "    df=records, \n",
     "    termA='Authors', \n",
     "    termB='Document Type', \n",
