first version of tutorial

--- a/guide/tutorial/1-introduction.ipynb
+++ b/guide/tutorial/1-introduction.ipynb
@@ -17,7 +17,7 @@
     "The library can be installed using:\n",
     "\n",
     "```\n",
-    "!pip3 install techMiner\n",
+    "!pip3 install techminer\n",
     "```\n",
     "\n",
     "directly in a Jupyter notebook.\n",
@@ -31,6 +31,10 @@
     "* Matplotlib.\n",
     "\n",
     "* Pandas.\n",
+    "\n",
+    "* Seaborn (optional for some plots).\n",
+    "\n",
+    "* Altair (optional for some plots).\n",
     "\n",
     "Please refer to the documentation of these tools in case of any doubt."
    ]
