--- a/guide/tutorial/2-data-adquisition.ipynb
+++ b/guide/tutorial/2-data-adquisition.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The information is usually captured by the user directly in a biblographical database as Scopus using complex a search string. The refinement of the search string is iterative and preliminary analysis of the keywords can help debug the search string. In this first part of the tutorial it is assumed that the search string is refined."
+    "The information is usually captured by the user directly in a biblographical database as Scopus using a complex search string. The refinement of the search string is iterative and preliminary analysis of the keywords can help debug the search string. In this first part of the tutorial it is assumed that the search string is refined."
    ]
   },
   {
