--- a/guide/tutorial/5-direct-queries.ipynb
+++ b/guide/tutorial/5-direct-queries.ipynb
@@ -30,30 +30,17 @@
    "outputs": [],
    "source": [
     "## Load the data\n",
-    "records = pd.read_json('demo-keywords.json', orient='records', lines=True)"
+    "records = pd.read_json('cleaned-records.json', orient='records', lines=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "156"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "##\n",
-    "## Number of records in the dataframe\n",
-    "##\n",
-    "len(records)"
+    "from techminer import RecordsDataFrame\n",
+    "rdf = RecordsDataFrame(records)"
    ]
   },
   {
@@ -64,7 +51,7 @@
     {
      "data": {
       "text/plain": [
-       "107"
+       "504"
       ]
      },
      "execution_count": 4,
@@ -74,14 +61,37 @@
    ],
    "source": [
     "##\n",
-    "## Number of sources\n",
+    "## Number of records in the dataframe\n",
     "##\n",
-    "len(records['Source title'].unique())"
+    "len(rdf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "320"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##\n",
+    "## Number of sources\n",
+    "##\n",
+    "rdf.num_of_sources"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -113,116 +123,123 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>119</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Towards high-capacity fibre-optic communicatio...</td>\n",
+       "      <td>Poletti F., Wheeler N.V., Petrovich M.N., Badd...</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>212.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Low-latency trading</td>\n",
+       "      <td>Hasbrouck J., Saar G.</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>180.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>Rise of the machines: Algorithmic trading in t...</td>\n",
        "      <td>Chaboud A.P., Chiquoine B., Hjalmarsson E., Ve...</td>\n",
        "      <td>2014</td>\n",
-       "      <td>105</td>\n",
+       "      <td>105.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>The Penn-Lehman Automated Trading Project</td>\n",
-       "      <td>Kearns M., Ortiz L.</td>\n",
-       "      <td>2003</td>\n",
-       "      <td>49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125</th>\n",
-       "      <td>Application of evolutionary computation for ru...</td>\n",
-       "      <td>Hu Y., Liu K., Zhang X., Su L., Ngai E.W.T., L...</td>\n",
+       "      <th>3</th>\n",
+       "      <td>The high-frequency trading arms race: Frequent...</td>\n",
+       "      <td>Budish E., Cramton P., Shim J.</td>\n",
        "      <td>2015</td>\n",
-       "      <td>45</td>\n",
+       "      <td>101.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>Automated trading with performance weighted ra...</td>\n",
-       "      <td>Booth A., Gerding E., McGroarty F.</td>\n",
+       "      <th>4</th>\n",
+       "      <td>The diversity of high-frequency traders</td>\n",
+       "      <td>Hagströmer B., Nordén L.</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>86.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Individual investors and financial disclosure</td>\n",
+       "      <td>Lawrence A.</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>82.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>High-frequency financial econometrics</td>\n",
+       "      <td>Aït-Sahalia Y., Jacod J.</td>\n",
        "      <td>2014</td>\n",
-       "      <td>38</td>\n",
+       "      <td>79.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>Automated trading with boosting and expert wei...</td>\n",
-       "      <td>Creamer G., Freund Y.</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>89</th>\n",
-       "      <td>Intra-daily volume modeling and prediction for...</td>\n",
-       "      <td>Brownlees C.T., Cipollini F., Gallo G.M.</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>79</th>\n",
-       "      <td>Flexible least squares for temporal data minin...</td>\n",
-       "      <td>Montana G., Triantafyllopoulos K., Tsagaris T.</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>134</th>\n",
-       "      <td>Robust technical trading strategies using GP f...</td>\n",
-       "      <td>Berutich J.M., López F., Luna F., Quintana D.</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Algorithmic trading review</td>\n",
-       "      <td>Treleaven P., Galas M., Lalchand V.</td>\n",
+       "      <th>7</th>\n",
+       "      <td>Design and analysis of a social botnet</td>\n",
+       "      <td>Boshmaf Y., Muslukhov I., Beznosov K., Ripeanu M.</td>\n",
        "      <td>2013</td>\n",
-       "      <td>20</td>\n",
+       "      <td>75.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <td>Portfolio of automated trading systems: Comple...</td>\n",
-       "      <td>Raudys S.</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>20</td>\n",
+       "      <th>8</th>\n",
+       "      <td>The Flash Crash: High-Frequency Trading in an ...</td>\n",
+       "      <td>Kirilenko A., Kyle A.S., Samadi M., Tuzun T.</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>What's not there: Odd lots and market data</td>\n",
+       "      <td>O'Hara M., Yao C., Ye M.</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>56.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 Title  \\\n",
-       "119  Rise of the machines: Algorithmic trading in t...   \n",
-       "66           The Penn-Lehman Automated Trading Project   \n",
-       "125  Application of evolutionary computation for ru...   \n",
-       "115  Automated trading with performance weighted ra...   \n",
-       "82   Automated trading with boosting and expert wei...   \n",
-       "89   Intra-daily volume modeling and prediction for...   \n",
-       "79   Flexible least squares for temporal data minin...   \n",
-       "134  Robust technical trading strategies using GP f...   \n",
-       "16                          Algorithmic trading review   \n",
-       "108  Portfolio of automated trading systems: Comple...   \n",
+       "                                               Title  \\\n",
+       "0  Towards high-capacity fibre-optic communicatio...   \n",
+       "1                                Low-latency trading   \n",
+       "2  Rise of the machines: Algorithmic trading in t...   \n",
+       "3  The high-frequency trading arms race: Frequent...   \n",
+       "4            The diversity of high-frequency traders   \n",
+       "5      Individual investors and financial disclosure   \n",
+       "6              High-frequency financial econometrics   \n",
+       "7             Design and analysis of a social botnet   \n",
+       "8  The Flash Crash: High-Frequency Trading in an ...   \n",
+       "9         What's not there: Odd lots and market data   \n",
        "\n",
-       "                                               Authors  Year  Cited by  \n",
-       "119  Chaboud A.P., Chiquoine B., Hjalmarsson E., Ve...  2014       105  \n",
-       "66                                 Kearns M., Ortiz L.  2003        49  \n",
-       "125  Hu Y., Liu K., Zhang X., Su L., Ngai E.W.T., L...  2015        45  \n",
-       "115                 Booth A., Gerding E., McGroarty F.  2014        38  \n",
-       "82                               Creamer G., Freund Y.  2010        31  \n",
-       "89            Brownlees C.T., Cipollini F., Gallo G.M.  2011        29  \n",
-       "79      Montana G., Triantafyllopoulos K., Tsagaris T.  2009        23  \n",
-       "134      Berutich J.M., López F., Luna F., Quintana D.  2016        21  \n",
-       "16                 Treleaven P., Galas M., Lalchand V.  2013        20  \n",
-       "108                                          Raudys S.  2013        20  "
+       "                                             Authors  Year  Cited by  \n",
+       "0  Poletti F., Wheeler N.V., Petrovich M.N., Badd...  2013     212.0  \n",
+       "1                              Hasbrouck J., Saar G.  2013     180.0  \n",
+       "2  Chaboud A.P., Chiquoine B., Hjalmarsson E., Ve...  2014     105.0  \n",
+       "3                     Budish E., Cramton P., Shim J.  2015     101.0  \n",
+       "4                           Hagströmer B., Nordén L.  2013      86.0  \n",
+       "5                                        Lawrence A.  2013      82.0  \n",
+       "6                           Aït-Sahalia Y., Jacod J.  2014      79.0  \n",
+       "7  Boshmaf Y., Muslukhov I., Beznosov K., Ripeanu M.  2013      75.0  \n",
+       "8       Kirilenko A., Kyle A.S., Samadi M., Tuzun T.  2017      74.0  \n",
+       "9                           O'Hara M., Yao C., Ye M.  2014      56.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "##\n",
-    "## Ten most cited documents\n",
+    "## Top N most cited documents\n",
     "##\n",
-    "records.sort_values(by='Cited by', ascending=False)[['Title', 'Authors', 'Year', 'Cited by']][0:10]"
+    "rdf.most_cited_documents(N=10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
