--- a/guide/tutorial/12-step-11-network-plots.ipynb
+++ b/guide/tutorial/12-step-11-network-plots.ipynb
@@ -1697,7 +1697,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rdf.term_by_term(\n",
+    "    termA='Authors', \n",
+    "    termB='Author Keywords', \n",
+    "    sepA=',', \n",
+    "    sepB=';',\n",
+    "    minmax=(2,4)).to_matrix()"
+   ]
   }
  ],
  "metadata": {
