all tests passed

--- a/guide/tutorial/04-step-03-keyword-completation.ipynb
+++ b/guide/tutorial/04-step-03-keyword-completation.ipynb
@@ -158,7 +158,7 @@
        "4    High-frequency trading;Market making;Market qu...\n",
        "5    Financial disclosure;Individual characteristic...\n",
        "6                                                 None\n",
-       "7    Social networking (online);Social network secu...\n",
+       "7    Commerce;Automated social engineering;Social n...\n",
        "8                                                 None\n",
        "9                                                 None\n",
        "dtype: object"
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
