--- a/guide/tutorial/06-step-05-keywords-cleanup.ipynb
+++ b/guide/tutorial/06-step-05-keywords-cleanup.ipynb
@@ -158,7 +158,7 @@
       "Record index: 2\n",
       "{\n",
       "  \"Title\": \"Rise of the machines: Algorithmic trading in the foreign exchange market\",\n",
-      "  \"keywords (cleaned)\": \"Algorithms;Algorithmic trading;r;adverse selection;arbitrage;computers;Costs;edi;Efficiency;foreign exchange;foreign exchange market;High frequency;High frequency data;information;Liquidity;market;Market quality;price discovery;price efficiency;return;speed;strategies;Time series;trading;trading;triangular arbitrage\"\n",
+      "  \"keywords (cleaned)\": \"adverse selection;Algorithms;Algorithmic trading;arbitrage;computers;Costs;edi;Efficiency;foreign exchange;foreign exchange market;High frequency;High frequency data;information;Liquidity;market;Market quality;price discovery;price efficiency;r;return;speed;strategies;Time series;trading;trading;triangular arbitrage\"\n",
       "}\n",
       "-----------------------------------------------\n",
       "Record index: 3\n",
@@ -188,13 +188,13 @@
       "Record index: 7\n",
       "{\n",
       "  \"Title\": \"Design and analysis of a social botnet\",\n",
-      "  \"keywords (cleaned)\": \"Social networking (online);Social network security;Commerce;Socialbots;Social engineering;Automated social engineering;Network security;Social network security;On-line social networks;Botnets;Online systems;Online privacy;Behavioral research;Profitability;Social networking (online)\"\n",
+      "  \"keywords (cleaned)\": \"Commerce;Automated social engineering;Social networking (online);Social network security;Online systems;Socialbots;Profitability;Online privacy;Network security;Behavioral research;On-line social networks;Social network security;Social networking (online);Botnets;Social engineering\"\n",
       "}\n",
       "-----------------------------------------------\n",
       "Record index: 8\n",
       "{\n",
       "  \"Title\": \"The Flash Crash: High-Frequency Trading in an Electronic Market\",\n",
-      "  \"keywords (cleaned)\": \"Electronic market;Flash crash;High frequency;high-frequency traders;High-frequency trading;market;trading;trading;design;edi;Financial markets;Financial markets;Futures;Futures market;index;intraday;prices;r;stock;stock index futures\"\n",
+      "  \"keywords (cleaned)\": \"Flash crash;High frequency;high-frequency traders;High-frequency trading;trading;design;edi;Electronic market;Financial markets;Financial markets;Futures;Futures market;index;intraday;market;prices;r;stock;stock index futures;trading\"\n",
       "}\n",
       "-----------------------------------------------\n",
       "Record index: 9\n",
