--- a/guide/tutorial/10-step-09-co_ocurrence.ipynb
+++ b/guide/tutorial/10-step-09-co_ocurrence.ipynb
@@ -1931,46 +1931,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Artificial intelligence</th>\n",
-       "      <td>1.004367e-01</td>\n",
-       "      <td>0.325397</td>\n",
-       "      <td>5.714286e-02</td>\n",
+       "      <th>Algorithmic trading system</th>\n",
+       "      <td>4.166667e-02</td>\n",
+       "      <td>0.022113</td>\n",
+       "      <td>6.930693e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Autoregulations</th>\n",
-       "      <td>-5.811324e-17</td>\n",
-       "      <td>0.039683</td>\n",
-       "      <td>5.204170e-18</td>\n",
+       "      <th>Architecture paradigms</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.002457</td>\n",
+       "      <td>-9.107298e-18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Big data</th>\n",
-       "      <td>7.205240e-02</td>\n",
-       "      <td>0.531746</td>\n",
-       "      <td>-6.938894e-17</td>\n",
+       "      <th>Holonic systems</th>\n",
+       "      <td>6.938894e-18</td>\n",
+       "      <td>0.007371</td>\n",
+       "      <td>-1.734723e-18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Commerce</th>\n",
-       "      <td>5.021834e-01</td>\n",
-       "      <td>1.460317</td>\n",
-       "      <td>2.000000e-01</td>\n",
+       "      <th>Multi agent systems</th>\n",
+       "      <td>1.875000e-01</td>\n",
+       "      <td>0.040541</td>\n",
+       "      <td>1.980198e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Decision making</th>\n",
-       "      <td>4.694323e-02</td>\n",
-       "      <td>0.150794</td>\n",
-       "      <td>2.857143e-02</td>\n",
+       "      <th>Multi-strategy trading</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.002457</td>\n",
+       "      <td>-9.107298e-18</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            Cluster 0  Cluster 1     Cluster 2\n",
-       "Artificial intelligence  1.004367e-01   0.325397  5.714286e-02\n",
-       "Autoregulations         -5.811324e-17   0.039683  5.204170e-18\n",
-       "Big data                 7.205240e-02   0.531746 -6.938894e-17\n",
-       "Commerce                 5.021834e-01   1.460317  2.000000e-01\n",
-       "Decision making          4.694323e-02   0.150794  2.857143e-02"
+       "                               Cluster 0  Cluster 1     Cluster 2\n",
+       "Algorithmic trading system  4.166667e-02   0.022113  6.930693e-02\n",
+       "Architecture paradigms      0.000000e+00   0.002457 -9.107298e-18\n",
+       "Holonic systems             6.938894e-18   0.007371 -1.734723e-18\n",
+       "Multi agent systems         1.875000e-01   0.040541  1.980198e-02\n",
+       "Multi-strategy trading      0.000000e+00   0.002457 -9.107298e-18"
       ]
      },
      "execution_count": 9,
@@ -2013,23 +2013,23 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Simao Sichman J.</th>\n",
+       "      <th>Takenaka T.</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Zhou X.</th>\n",
+       "      <th>Sandoval J.</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Zhu B.</th>\n",
+       "      <th>Dixon M.</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Zhu H.</th>\n",
+       "      <th>Breitner M.H.</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Zhu S.</th>\n",
+       "      <th>Vaitonis M.</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2037,12 +2037,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                   cluster\n",
-       " Simao Sichman J.        0\n",
-       " Zhou X.                 0\n",
-       " Zhu B.                  0\n",
-       " Zhu H.                  0\n",
-       " Zhu S.                  0"
+       "               cluster\n",
+       "Takenaka T.          0\n",
+       "Sandoval J.          0\n",
+       "Dixon M.             0\n",
+       "Breitner M.H.        0\n",
+       "Vaitonis M.          0"
       ]
      },
      "execution_count": 10,
@@ -2278,16 +2278,38 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Conference Paper</th>\n",
+       "      <th>Book</th>\n",
        "      <th>Article</th>\n",
        "      <th>Book Chapter</th>\n",
-       "      <th>Article in Press</th>\n",
-       "      <th>Book</th>\n",
-       "      <th>Review</th>\n",
-       "      <th>Note</th>\n",
        "      <th>Short Survey</th>\n",
+       "      <th>Review</th>\n",
+       "      <th>Article in Press</th>\n",
+       "      <th>Note</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Abdunabi T.</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Abergel F.</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>Abghour N.</th>\n",
        "      <td>1.0</td>\n",
@@ -2300,18 +2322,8 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Adam M.T.P.</th>\n",
-       "      <td>1.0</td>\n",
+       "      <th>Abrol S.</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Adams N.</th>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -2319,21 +2331,9 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Addis D.</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Adegboye A.</th>\n",
+       "      <th>Acharya A.</th>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -2348,19 +2348,19 @@
        "</div>"
       ],
       "text/plain": [
-       "              Conference Paper  Article  Book Chapter  Article in Press  Book  \\\n",
-       " Abghour N.                1.0      0.0           0.0               0.0   0.0   \n",
-       " Adam M.T.P.               1.0      0.0           0.0               0.0   0.0   \n",
-       " Adams N.                  0.0      1.0           0.0               0.0   0.0   \n",
-       " Addis D.                  1.0      0.0           0.0               0.0   0.0   \n",
-       " Adegboye A.               1.0      0.0           0.0               0.0   0.0   \n",
+       "             Conference Paper  Book  Article  Book Chapter  Short Survey  \\\n",
+       "Abdunabi T.               3.0   0.0      0.0           0.0           0.0   \n",
+       "Abergel F.                0.0   1.0      0.0           0.0           0.0   \n",
+       "Abghour N.                1.0   0.0      0.0           0.0           0.0   \n",
+       "Abrol S.                  0.0   0.0      1.0           0.0           0.0   \n",
+       "Acharya A.                1.0   0.0      0.0           0.0           0.0   \n",
        "\n",
-       "              Review  Note  Short Survey  \n",
-       " Abghour N.      0.0   0.0           0.0  \n",
-       " Adam M.T.P.     0.0   0.0           0.0  \n",
-       " Adams N.        0.0   0.0           0.0  \n",
-       " Addis D.        0.0   0.0           0.0  \n",
-       " Adegboye A.     0.0   0.0           0.0  "
+       "             Review  Article in Press  Note  \n",
+       "Abdunabi T.     0.0               0.0   0.0  \n",
+       "Abergel F.      0.0               0.0   0.0  \n",
+       "Abghour N.      0.0               0.0   0.0  \n",
+       "Abrol S.        0.0               0.0   0.0  \n",
+       "Acharya A.      0.0               0.0   0.0  "
       ]
      },
      "execution_count": 13,
