fix cross correlation computation errors

--- a/guide/tutorial/10-step-09-co_ocurrence.ipynb
+++ b/guide/tutorial/10-step-09-co_ocurrence.ipynb
@@ -1882,7 +1882,7 @@
     "    termB='Year', \n",
     "    sepA=';', \n",
     "    sepB=None, \n",
-    "    minmax=(5,8)).to_matrix()"
+    "    minmax=(5,8)).tomatrix()"
    ]
   },
   {
@@ -2373,7 +2373,7 @@
     "    termA='Authors', \n",
     "    termB='Document Type', \n",
     "    sepA=',', \n",
-    "    sepB=None).to_matrix().head()"
+    "    sepB=None).tomatrix().head()"
    ]
   }
  ],
